fix main x overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -51,6 +51,8 @@ article pre {
   @apply p-4;
   @apply bg-gray-200;
   @apply rounded-lg;
+  @apply overflow-x-auto;
+  @apply min-w-0;
 }
 
 article code.language-poem {
